# event-planner

./: .gitignore  .gitmodules  README.md  pyproject.toml
event_planner/: wa_invite.py
tests/: test.txt  test_event_planner.py  test_list.csv
