[tool.poetry]
name = "event-planner"
version = "0.1.0"
description = ""
authors = ["tekritesh <ritesh.tekriwal03@gmail.com>"]
readme = "README.md"
packages = [{include = "event_planner"}]

[tool.poetry.dependencies]
python = "^3.10"
logging = "^0.4.9.6"
pandas = "^2.2.2"
pytest = "^8.2.1"
ipykernel = "^6.29.4"
pillow = ">=9.3.0,<9.4.0"
pywhatkit = "^5.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
waMessenger = "event_planner.wa_invite:cli"
